Almost done, but bean not working for tests